# dundie-rewards

./: .coveragerc  .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  True  alembic.ini  conftest.py  mkdocs.yml  notes.md  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  setup.py  text-result.xml
.github/workflows/: main.yaml  main.yml
.vscodelocal/: Local State  Network Persistent State  TransportSecurity  languagepacks.json  machineid
.vscodelocal/Backups/: workspaces.json
.vscodelocal/Cache/Cache_Data/: data_0  data_1  data_2  index
.vscodelocal/CachedConfigurations/defaults/configurationDefaultsOverrides/: configuration.json
.vscodelocal/CachedData/30d9c6cd9483b2cc586687151bcbcd635f373630/: agent-1e0c9d998e626bea30792125c273b56f.code  agent-66408645316889fd171dd3287fc360fb.code  agent-744c53c22f5b1bb4fa0959807795d83e.code  agent-f6d2ccb097c324e7930794084f465a23.code  bindings-7c303ff98383222299f8facacced51a1.code  bindings-99ea6c610be7d724029e9c89ec7c3096.code  bindings-9c06dde14468fa9cf4e879421cc9390c.code  bom-handling-3dfa9c301ed54bc9ae8d464c5b1a1056.code  clone-42b45b9fb5ce0329e1caaa4e56ce6ba0.code  common-5b4518c950a32c058bc8d58d8905c449.code  common-6b3e201864b07f924f3428fdc5349c40.code  common-767f129157c2ccd92e050b5979ec7655.code  common-9e8d14a35f0752fd7c99db1e31c8ea7a.code  common-ff0229a0ca132381bbfd88855e4463e4.code  constants-6705acc8bb0acaae3b48bf6672f45a5d.code  emmetNodeMain-10d4536601d92077d6285c13b5e0e2d9.code  encoding-d612fe1b6f44a6a03b5fc5d4f6da3f1d.code  extension-13c0964cf71c4f5184d7cc7ddc9eb575.code  extension-41538d6fc21c9e9f338d2833f2358ddf.code  extension-8b9ffcabccf239263f81dcc5cc306096.code  extension-8f0ed3df14078c2219e15f46313e7a9d.code  extension-ae45abbc4bacd70778845f255306d50b.code  extension-cb6e228f85563c41573e3ed215505768.code  extension-e62075d20d7e201bdd4cf2f2a2773104.code  extension-f305b40c7f6a6b198094d9a5c62d9e01.code  extensionHostProcess-cdf298df2ed15fb08082c9cff9de63b1.code  extensionHostProcess.nls-9da5db819241af15753becae6fc8a224.code  feature-github-cbdab09fe14c86b31595e77a48a15160.code  gitlens-1c296986c6a50837cfbbacf5629307aa.code  graceful-fs-24f4afc1fe4029b25c39531e30af8a7c.code  helpers-4053c7672d833eccb3b1b93cdf8dbaad.code  index-031ce0e3754b8ed01cdac0d0576057f7.code  index-0824b9998ec50e5c187e42a23d7a9cbb.code  index-08e7c3cdb83f740917937c5cc6d7e452.code  index-0d155b6f5156f54885091fa610b55c7b.code  index-124be1c2bde38c9ba6176c2dc2687fe8.code  index-14890dff4d8f569d76a9389c96ac7f52.code  index-1e30a7f9267153b6a5cd35a4a209657d.code  index-2b73c25efe39081c95933c76880e5f36.code  index-417fb052fcc3f8c1dded2da42250c642.code  (+60 more)
.vscodelocal/CachedData/30d9c6cd9483b2cc586687151bcbcd635f373630/chrome/js/: 06191605a1e78889_0  083720acdc693213_0  09c80e20a603d543_0  0cbc94d242bce0b7_0  0d357b91fb599b3c_0  39e10802e0219fb4_0  4ecbff71e0501bb8_0  5335cadf98ea1d79_0  7c1a2aa5541d655b_0  90d68e432b5ffc26_0  a0ee54f11f6eb8db_0  a2379b4f28683a3a_0  b9b359af0e4161d5_0  c620e43022948324_0  dc4e1973621bce9f_0
.vscodelocal/CachedData/30d9c6cd9483b2cc586687151bcbcd635f373630/chrome/js/index-dir/: the-real-index
.vscodelocal/CachedData/30d9c6cd9483b2cc586687151bcbcd635f373630/chrome/wasm/index-dir/: the-real-index
.vscodelocal/CachedExtensions/: builtin
.vscodelocal/Code Cache/js/index-dir/: the-real-index
.vscodelocal/GPUCache/: data_1  index
.vscodelocal/User/globalStorage/: storage.json
assets/: database.db  database.example.json  database.json  people.csv
docs/: how_to_install.md  how_to_use.md  index.md  release.md  roadmap.md
dundie/: -- SQLite.sql  .sql  CONTRIBUTING.md  VERSION.txt  __init__.py  __main__.py  app.py  cli.py  core.py  database.py  id,person_id,password  models.py  settings.py  utils.py
dundie/tests/: test_load.py
dundie/utils/: auth.py  db.py  email.py  exchange.py  export.py  log.py  login.py  logs.py  user.py
integration/: conftest.py  constants.py  test_add.py  test_load.py  test_movements.py  test_remove.py  test_show.py  test_transfer.py
integration/assets/: people.csv
migrations/: env.py  script.py.mako
migrations/versions/: 0b227c25c8e1_initial.py  0fd9036f5d33_adicionado_campo_currenty_a_person.py  4594b7879fd2_initial.py  6bdf305b8029_hash_passwords.py  bbd9c1f900ee_initial.py  c4abb08ab5d3_adicionado_o_campo_currency_em_person.py
tests/: conftest.py  constants.py  test_access_allowed.py  test_add.py  test_database.py  test_load.py  test_login.py  test_read.py  test_read_movements.py  test_transfer.py  test_user.py  test_utils.py  test_utils_database.py  test_utils_email.py  test_utils_exchange.py  test_utils_export.py  test_utils_login.py
tests/assets/: people.csv
tests/utils/: log.py
