[project]
name="dundie"
description="Reward Point System for Dunder Mifflin"
authors = [
    {name = "Bruno Rocha", email = "Bruno@rocha.com"}
]
requires-python=">=3.9"
license = {text = "MIT"}
dynamic = ["version", "readme"]
dependencies = [
    "click",
    "rich",
    "rich-click",
    "pydantic<2.0",
    "sqlalchemy==1.4.35",
    "sqlmodel",
    "alembic",
    "httpx",
    "setuptools",
    "pwdlib[argon2]",
    "aiosmtpd>=1.4.6",
]

[project.urls]
Homepage = 'https://dundermifflin.com'
Source = 'https://github.com/dm/dundie'

[project.scripts]
dundie = "dundie.__main__:main"

[project.optional-dependencies]
test = [
    "black>=24.10.0",
    "coverage>=7.6.4",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pyproject-flake8>=7.0.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-forked>=1.6.0",
    "types-setuptools>=75.2.0.20241025",
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ["dundie"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools_scm]
write_to = "dundie/VERSION.txt"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -vv"
testpaths = [
    "tests",
    "integration",
]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "ipython>=8.18.1",
    "pytest-watch>=4.2.0",
    "taskipy>=1.14.0",
    "types-setuptools>=75.2.0.20241025",
]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py310"

[tool.taskipy.tasks]
lint = "uvx ruff check dundie integration tests"
fmt = "uvx ruff format dundie integration tests"
test = """
    uv run --extra test pytest -s --cov=dundie --forked
    uv run coverage xml
    uv run coverage html
    """
docs = "uvx mkdocs build --clean"
docs-serve = "uvx mkdocs serve"
clean = """
    find ./ -name '*.pyc' -exec rm -f {} \\;
    find ./ -name '__pycache__' -exec rm -rf {} \\;
    find ./ -name 'Thumbs.db' -exec rm -f {} \\;
    find ./ -name '*~' -exec rm -f {} \\;
    rm -rf {.cache,.pytest_cache,.mypy_cache,htmlcov,docs/_build}
    """
resetdb = """
    read -p "Are you sure you want to reset the project db? [y/N] " -n 1 -r
    echo    # (optional) move to a new line
    if [[ $REPLY =~ ^[Yy]$ ]]
    then
        rm -rf assets/database.db
        uv run python -m aiosmtpd -n &
        uv run dundie load assets/people.csv
        uv run alembic stamp head
        pkill -fc aiosmtpd
    fi
    """
ci = "task lint && task test"
